# SmartPlay-AI

./: README.md
SmartPlayAI/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  changes.txt  clear_questions.py  fetchLLMresponse.py  main.py  package-lock.json  pylint_report.txt  pyproject.toml  seed_questions.py  test_evaluation.py
SmartPlayAI/alembic/: README  env.py
SmartPlayAI/alembic/versions/: 01a99f929011_add_authenticate_jwt.py  0470c6b2f83d_use_mapped__for_type_cast.py  0ecf03d056f0_create_table.py  0f43517b036e_patch_time_zone.py  2b281c3f428c_add_trigger_for_updateplayer_score_if_.py  5ace790fb662_change_date_time_func.py  9a499078b2fb_updated_response_to_store_llm_feed_back_.py  9dcec3002933_initial_migration.py  dbf566cb41d1_fix_tables.py
SmartPlayAI/app/: backend.py  frontend.py  main.py
SmartPlayAI/model/: crud.py  database.py  models.py  schemas.py
SmartPlayAI/router/: authenticate.py  players.py  questions.py  responses.py
SmartPlayAI/static/: controls.js  leaderboard.css  leaderboard.js  questions.json
SmartPlayAI/templates/: base_head.html  form.html  header.html  index.html  leaderboard.html  next_question.html  player_detail.html  question_game.html  result.html  theme_selection.html
SmartPlayAI/templates/components/: nav_controls.html  nav_controls_navbar.html  navbar.html
SmartPlayAI/tests/: conftest.py  test_app.py  test_backend_features.py  test_database.py
